@@ -1,3 +1,7 @@
+2005-10-20  Derek Price  <derek@ximbiot.com>
+
+	 * md5.c, md5.h, strcasecmp.c, strncasecmp.c: Update from GNULIB.
+
 2005-10-05  Derek Price  <derek@ximbiot.com>
 
 	* getaddrinfo.h, getdelim.c, md5.h: Update from GNULIB.
